--- a/scraper_template/copier.yml
+++ b/scraper_template/copier.yml
@@ -1,3 +1,25 @@
+_jinja_extensions:
+  - copier_templates_extensions.TemplateExtensionLoader
+  - extensions/modulify.py:ModulifyExtension
+
+_exclude:
+  # Default excludes
+  - 'copier.yml'
+  - '~*'
+  - '*.py[co]'
+  - '__pycache__'
+  - '.DS_Store'
+  # Custom excludes
+  - 'extensions'
+
 scraper_name:
   type: str
-  help: 'The name your new scraper'
+  help: 'The human-readable display name of your new scraper'
+
+scraper_module:
+  type: str
+  help: |-
+    The name of the Python module for your scraper.
+       Please ensure this is a valid Python module name!
+  when: '{{ scraper_name != scraper_name | modulify }}'
+  default: '{{ scraper_name | modulify }}'
