--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,3 +69,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          SWR_BENZINPREISE_SERVICE_ACCOUNT: ${{ secrets.SWR_BENZINPREISE_SERVICE_ACCOUNT }}
