--- a/serverless.part.yml
+++ b/serverless.part.yml
@@ -35,6 +35,11 @@ custom:
     cacheLocation: './.serverless-python-cache'
     staticCacheMaxVersions: 1
 
+  customDomainBaseNews: scrapers.data.wdr.news
+  acmCertificateId: 0a7c94b9-edf4-44ee-9736-ac4a3b86cf73
+
+  customDomainNameNews: '${self:provider.stage}.${self:custom.customDomainBaseNews}'
+
 package:
   # Ignore everything but the ddj_cloud module
   patterns:
@@ -151,6 +156,16 @@ resources:
           HttpVersion: 'http2'
           IPV6Enabled: 'true'
           PriceClass: 'PriceClass_All' # Distribute worldwide
+
+          # ACM Certificate and DNS must be set up manually
+          Aliases:
+            - '${self:custom.customDomainNameNews}'
+          ViewerCertificate:
+            AcmCertificateArn:
+              Fn::Sub: arn:aws:acm:us-east-1:${AWS::AccountId}:certificate/${self:custom.acmCertificateId}
+            MinimumProtocolVersion: 'TLSv1.2_2021'
+            SslSupportMethod: 'sni-only'
+
           DefaultCacheBehavior:
             AllowedMethods:
               - GET
