Add explicit dependency for pipenv

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ black = "*"
 copier = "~=6.1"
 copier-templates-extensions = "~=0.2"
 python-slugify = "~=6.1"
+pipenv = "*"
 
 [requires]
 python_version = "3.9"
