➕ Add dependency for datawrapper

--- a/Pipfile
+++ b/Pipfile
@@ -20,12 +20,14 @@ db-dtypes = "~=1.0"
 sentry-sdk = "~=1.8"
 certifi = "*"
 tzdata = "*"
+datawrapper = "~=0.5.3"
 
 [dev-packages]
 click = "~=8.1"
 black = "*"
 copier = "~=6.1"
 copier-templates-extensions = "~=0.2"
+pydantic = "<2"
 python-slugify = "~=6.1"
 pipenv = "*"
 colorama = "*"
