--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['16.x']
-        python-version: ['3.9']
-        pipenv-version: ['2022.12.19']
+        node-version: ["16.x"]
+        python-version: ["3.9"]
+        pipenv-version: ["2022.12.19"]
 
     steps:
       # Checkout repository
@@ -23,18 +23,20 @@ jobs:
         if: endsWith(github.ref, '/main')
         run: |
           echo "STAGE=staging" >> $GITHUB_ENV
+          echo "NASA_WALDBRANDDATEN_RHODOS_CHART_ID=SzTxK" >> $GITHUB_ENV
 
       - name: Set environment variables for production
         if: endsWith(github.ref, '/production')
         run: |
           echo "STAGE=prod" >> $GITHUB_ENV
+          echo "NASA_WALDBRANDDATEN_RHODOS_CHART_ID=SzTxK" >> $GITHUB_ENV
 
       # Set up Python and install dependencies
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pipenv'
+          cache: "pipenv"
 
       - name: Install pipenv
         run: pip install "pipenv==${{ matrix.pipenv-version }}"
@@ -46,7 +48,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install Node.js dependencies
         run: npm ci --production
@@ -66,7 +68,11 @@ jobs:
       - name: Deploy with serverless
         run: pipenv run npx serverless deploy
         env:
+          STAGE: ${{ env.STAGE }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           SWR_BENZINPREISE_SERVICE_ACCOUNT: ${{ secrets.SWR_BENZINPREISE_SERVICE_ACCOUNT }}
+          NASA_WALDBRANDDATEN_RHODOS_MAP_KEY: ${{ secrets.NASA_WALDBRANDDATEN_RHODOS_MAP_KEY }}
+          NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN }}
+          NASA_WALDBRANDDATEN_RHODOS_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_RHODOS_CHART_ID }}
