--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pipenv"
+          cache: "pip"
 
       - name: Install pipenv
         run: pip install "pipenv==${{ matrix.pipenv-version }}"
@@ -65,8 +65,8 @@ jobs:
       - name: Generate serverless.yml
         run: pipenv run manage generate
 
-      - name: Check pipenv version
-        run: pipenv --version
+      - name: Render requirements.txt
+        run: pipenv requirements > requirements.txt
 
       - name: Deploy with serverless
         run: pipenv run npx serverless deploy
