--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
+          cache: "pipenv"
 
       - name: Install pipenv
         run: pip install "pipenv==${{ matrix.pipenv-version }}"
