--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           echo "STAGE=staging" >> $GITHUB_ENV
           echo "NASA_WALDBRANDDATEN_RHODOS_CHART_ID=2zgmZ" >> $GITHUB_ENV
           echo "NASA_WALDBRANDDATEN_MAUI_CHART_ID=XNvar" >> $GITHUB_ENV
+          echo "NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID=Ja0Eq" >> $GITHUB_ENV
 
       - name: Set environment variables for production
         if: endsWith(github.ref, '/production')
@@ -32,6 +33,7 @@ jobs:
           echo "STAGE=prod" >> $GITHUB_ENV
           echo "NASA_WALDBRANDDATEN_RHODOS_CHART_ID=nru3h" >> $GITHUB_ENV
           echo "NASA_WALDBRANDDATEN_MAUI_CHART_ID=folgL" >> $GITHUB_ENV
+          echo "NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID=Xwt4r" >> $GITHUB_ENV
 
       # Set up Python and install dependencies
       - name: Set up Python ${{ matrix.python-version }}
@@ -83,3 +85,5 @@ jobs:
           NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_RHODOS_DATAWRAPPER_TOKEN }}
           NASA_WALDBRANDDATEN_RHODOS_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_RHODOS_CHART_ID }}
           NASA_WALDBRANDDATEN_MAUI_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_MAUI_CHART_ID }}
+          NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN: ${{ secrets.NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN }}
+          NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID: ${{ env.NASA_WALDBRANDDATEN_TENERIFFA_CHART_ID }}
