--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -117,5 +117,26 @@
             "NASA_WALDBRANDDATEN_RHODOS_MAP_KEY",
             "NASA_WALDBRANDDATEN_TENERIFFA_DATAWRAPPER_TOKEN"
         ]
+    },
+    {
+        "display_name": "Talsperren",
+        "module_name": "talsperren",
+        "description": "Sammelt die Füllstände verschiedener Talsperren in NRW.",
+        "contact_name": "Jannes Höke",
+        "contact_email": "mail@jhoeke.de",
+        "memory_size": "512",
+        "ephemeral_storage": "512",
+        "preset": "pandas",
+        "events": [
+            {
+                "type": "schedule",
+                "enabled": true,
+                "data": {
+                    "interval": "custom",
+                    "interval_custom": "rate(3 hours)"
+                }
+            }
+        ],
+        "extra_env": []
     }
 ]
