🔧 Run it hourly

--- a/ddj_cloud/scrapers/talsperren/.copier-answers.yml
+++ b/ddj_cloud/scrapers/talsperren/.copier-answers.yml
@@ -5,8 +5,8 @@ contact_name: Jannes Höke
 description: Sammelt die Füllstände verschiedener Talsperren in NRW.
 display_name: Talsperren
 ephemeral_storage: '512'
-interval: custom
-interval_custom: rate(3 hours)
+interval: hourly
+interval_custom: null
 memory_size: '512'
 module_name: talsperren
 preset: pandas
