--- a/scrapers_config.json
+++ b/scrapers_config.json
@@ -132,8 +132,8 @@
                 "type": "schedule",
                 "enabled": true,
                 "data": {
-                    "interval": "custom",
-                    "interval_custom": "rate(3 hours)"
+                    "interval": "hourly",
+                    "interval_custom": null
                 }
             }
         ],
