--- a/serverless.part.yml
+++ b/serverless.part.yml
@@ -37,6 +37,9 @@ custom:
     cacheLocation: "./.serverless-python-cache"
     staticCacheMaxVersions: 1
 
+    # Needed for lxml to work?
+    pipCmdExtraArgs: ["--platform manylinux2014_x86_64", "--only-binary=:all:"]
+
   customDomainBaseNews: scrapers.data.wdr.news
   customDomainBaseWdrDe: scrapers.data.wdr.de
   acmCertificateId: 09a7667f-ce0e-4ca7-8ee3-31ba79f75f80
