--- a/Pipfile
+++ b/Pipfile
@@ -16,11 +16,11 @@ requests = "~=2.28"
 boto3 = "~=1.24"
 google-cloud-bigquery = "~=3.2"
 google-api-python-client = "~=2.54"
-db-dtypes = "~=1.0"
 sentry-sdk = "~=1.8"
 certifi = "*"
 tzdata = "*"
 datawrapper = "~=0.5.3"
+fastparquet = "*"
 
 [dev-packages]
 click = "~=8.1"
