--- a/scraper_template/copier.yml
+++ b/scraper_template/copier.yml
@@ -4,25 +4,25 @@ _jinja_extensions:
 
 _exclude:
   # Default excludes
-  - 'copier.yml'
-  - '~*'
-  - '*.py[co]'
-  - '__pycache__'
-  - '.DS_Store'
+  - "copier.yml"
+  - "~*"
+  - "*.py[co]"
+  - "__pycache__"
+  - ".DS_Store"
   # Custom excludes
-  - 'extensions'
+  - "extensions"
 
 display_name:
   type: str
-  help: 'The human-readable display name of your new scraper'
+  help: "The human-readable display name of your new scraper"
 
 module_name:
   type: str
   help: |-
     The name of the Python module for your scraper.
        Please ensure this is a valid Python module name!
-  when: '{{ display_name != display_name | modulify }}'
-  default: '{{ display_name | modulify }}'
+  when: "{{ display_name != display_name | modulify }}"
+  default: "{{ display_name | modulify }}"
 
 description:
   type: str
@@ -39,12 +39,12 @@ contact_email:
 
 interval:
   type: str
-  help: 'How often should the scraper run?'
+  help: "How often should the scraper run?"
   choices:
-    'Once every 15 minutes': '15min'
-    'Once every hour': 'hourly'
-    'Once a day': 'daily'
-    'Custom': 'custom'
+    "Once every 15 minutes": "15min"
+    "Once every hour": "hourly"
+    "Once a day": "daily"
+    "Custom": "custom"
 
 interval_custom:
   type: str
@@ -60,25 +60,25 @@ memory_size:
        Note: Scrapers have a maximum runtime of 15 minutes.
        If your scraper is very CPU-intensive, choose a bigger option to ensure it finishes.
   choices:
-    'small - 512MB RAM': '512'
-    'default - 1024MB RAM': '1024'
-    'big - 4096MB RAM': '4096'
-    'huge - 8192MB RAM': '8192'
-  default: '1024'
+    "small - 512MB RAM": "512"
+    "default - 1024MB RAM": "1024"
+    "big - 4096MB RAM": "4096"
+    "huge - 8192MB RAM": "8192"
+  default: "1024"
 
 ephemeral_storage:
   type: str
   help: How much temporary local file storage does the scraper need?
   choices:
-    'default - 512MB': '512'
-    'medium - 2GB': '2048'
-    'big - 4GB': '4096'
-    'huge - 8GB': '8192'
-  default: '512'
+    "default - 512MB": "512"
+    "medium - 2GB": "2048"
+    "big - 4GB": "4096"
+    "huge - 8GB": "8192"
+  default: "512"
 
 preset:
   type: str
-  help: 'Choose a preset'
+  help: "Choose a preset"
   choices:
-    'Minimal': 'minimal'
-    'pandas': 'pandas'
+    "Minimal": "minimal"
+    "pandas": "pandas"
