--- a/Pipfile
+++ b/Pipfile
@@ -20,14 +20,13 @@ sentry-sdk = "~=1.8"
 certifi = "*"
 tzdata = "*"
 datawrapper = "~=0.5.3"
-fastparquet = "*"
+fastparquet = "2023.10.1"
 
 [dev-packages]
 click = "~=8.1"
 black = "*"
-copier = "~=6.1"
-copier-templates-extensions = "~=0.2"
-pydantic = "<2"
+copier = "~=9.0"
+copier-templates-extensions = "~=0.3"
 python-slugify = "~=6.1"
 pipenv = "*"
 colorama = "*"
